# 3sem

./: .gitignore
123/: CMakeLists.txt  main.cpp
doxy/: Doxyfile  doxygen_log.txt
doxy/html/: annotated.html  class_const___iterator-members.html  class_const___iterator.html  class_gun-members.html  class_gun.html  class_iterator-members.html  class_iterator.html  class_link-members.html  class_link.html  class_mask-members.html  class_mask.html  class_mission-members.html  class_mission.html  class_p_r_o-members.html  class_p_r_o.html  class_plane-members.html  class_plane.html  class_r_e_b-members.html  class_r_e_b.html  class_radio-members.html  class_radio.html  class_rocket-members.html  class_rocket.html  class_scout-members.html  class_scout.html  class_table-members.html  class_table.html  classes.html  classvector-members.html  classvector.html  dir_666aa783a99e2301efe58a260000a68e.html  files.html  functions.html  functions_func.html  functions_rela.html  hierarchy.html  menudata.js  my__vector_8h_source.html  prog4_8h_source.html  struct_item-members.html  (+1 more)
doxy/latex/: annotated.tex  files.tex  (+25 more)
plane_battle/: .gitignore  CMakeLists.txt  main.cpp  prog4.cpp  prog4.h
prog1/: main.cpp  prog1.cpp  prog1.h
prog2/: CMakeLists.txt
prog3/: CMakeLists.txt  Readme.txt
prog3_dynamic/: CMakeLists.txt  Readme.txt
prog3_external/: CMakeLists.txt  README.md  external.cpp  external.h  main.cpp  main_old.cpp  table.cpp  table.h
prog4/: CMakeLists.txt  main.cpp  my_vector.h  prog4.cpp  prog4.h  test.cpp
untitled/: CMakeLists.txt  main.cpp  prog4.cpp  prog4.h
(+37 files in other folders)
